@@ -1,5 +1,7 @@
 Revision history for Web::ComposableRequest
 
+          - Added hashref inflation for body_params and query_params
+          - Fixed left over undecoded keys error in Util decode_hash
           - Added badge markup
 
 0.2.1     2015-08-23 23:17:18
